# Backend

./: .dockerignore  .gitignore  Dockerfile  Dokumentacja bazy danych.docx  README.md  compose.yaml  main.py  pyproject.toml  pyvenv.cfg
src/: config.py
src/Model/: BankAccount.py  BankAccountOperation.py  Chat.py  ChildModel.py  ClassGroup.py  Collection.py  CollectionDocument.py  CollectionModel.py  CollectionOperation.py  CollectionStatusEnum.py  ParentBasicInfo.py  PeopleModel.py  UserAccount.py  UserAccountPrivilegeEnum.py  UserAccountStatusEnum.py
src/NoSQL/: connection.py
src/SQL/: __init__.py  connection.py  data_insert.py
src/SQL/Enum/: AccountStatus.py  CollectionOperationType.py  CollectionStatus.py  ParentRole.py  Privilege.py
src/SQL/Tables/: Collection.py  Financial.py  OrganizationUnit.py  People.py  __init__.py
src/Service/Auth/: Models.py  Redis.py  __init__.py  dependencies.py  helpers.py  jwt.py  token.py  username_password.py
src/Service/ClassGroup/: class_group_service.py
src/Service/ClassView/: class_view_operations.py
src/repository/: account_repository.py  bank_account_repository.py  chat_repository.py  child_repository.py  class_group_repository.py  collection_documents_repository.py  collection_operations_repository.py  collection_repository.py  parent_group_role_repository.py  parent_repository.py  parenthood_repository.py
src/router/: __init__.py  auth.py  bank_account.py  chat.py  child.py  class_group.py  collection.py  collection_documents.py  parent.py  parent_profile.py  report.py  user_account.py
(+4 files in other folders)
