[project]
name = "backend"
version = "0.0.1"
description = "Backed for SchoolMoney project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.11",
    "greenlet>=3.1.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "redis>=5.2.1",
    "schwifty>=2025.1.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "pymongo==4.6.1",
    "motor>=3.3.0",
    "psycopg2-binary>=2.9.10",
    "motor>=3.3.0",
    "websockets>=11.0",
]
